@@ -196,6 +196,7 @@ EDITOR
   "(v)iew" then run `:trust`.
 • |gx| in help buffers opens the online documentation for the tag under the
   cursor.
+• |:Undotree| for visually navigating the |undo-tree|
 
 EVENTS
 
